      restrict to smaller values).

      \item \R on Windows (since Windows 10 2004) now uses the new Segment
      Heap allocator. This may improve performance of some memory intensive
      applications.

      \item When \R packages are built, typically by \command{R CMD build <pkg>},
      the new \command{--user=<build_user>} option overrides the
      (internally determined) user name, currently \code{Sys.info()["user"]} 
      or \env{LOGNAME}.  This is a (modified) fulfillment of Will Landau's
      suggestion in \PR{17530}.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item System valgrind headers are required to use
      \command{configure} option \option{--with-valgrind-instrumentation}
      with value \code{1} or \code{2}.

      \item \command{configure} will warn if it encounters a 32-bit
      build, as that is nowadays almost untested.
    }
  }

  %% \subsection{PACKAGE INSTALLATION}{
  %%   \itemize{
  %%     \item .
  %%   }
  %% }

  \subsection{BUG FIXES}{
    \itemize{
      \item Probability distribution functions \code{[dpq]<distrib>(x, *)},
      but also \code{bessel[IKJY](x, .)} are now consistently preserving
      \code{attributes(x)} when \code{length(x) == 0}, e.g., for a
      \eqn{2 \times 0}{2 x 0} matrix, thanks to Karolis Koncevičius'
      report \PR{18509}.

      \item Group \dQuote{Summary} computations such as
      \code{sum(1:3, 4, na.rm = 5, NA, 7, na.rm = LL)} now give an error
      instead of either \code{17} or \code{NN} for \code{LL} true or false,
      as proposed by Ivan Krylov on the R-devel mailing list.  (This
      also means it is now an error to specify \code{na.rm} more than once.)

      \item \code{as.complex(x)} now returns \code{NA_complex_} also for
      \code{NA_real_} arguments, as it does for all other \code{NA}s.

      \item Directories are now omitted by
      \code{file.copy(,recursive = FALSE)} and in \code{file.append()}
      (\PR{17337}).
