@@ -1,0 +1,11 @@
+Package: parseDataEx
+Title: Example Showing PR_16756
+Version: 0.1-0
+Author: Martin Maechler, Kirill Mueller
+Maintainer: R Core <R-core@almost.r-project.org>
+Description: Dummy Package Showing PR_16756.
+  See  <https://bugs.r-project.org/show_bug.cgi?id=16756>,
+  also <https://rpubs.com/krlmlr/getParseData>
+License: GPL-3
+KeepSource: true
+
