@@ -1,0 +1,5 @@
+f <- function() {
+  if (FALSE) # never ..
+    TRUE
+  ## i.e., we will always return an   invisible()  NULL
+}
